--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -10,6 +10,7 @@
 	"chat.work_chat.history.holdMoney": "Средства зарезирвировано.",
 	"chat.work_chat.history.DealFinishCanceledByCustomer": "Возвращено на доработку",
 	"chat.work_chat.history.workStarted": "Работа начата",
+	"chat.work_chat.history.arbitration": "Обращение в арбитарж",
 	"chat.work_chat.system_messages.CancelsubmitedDescriptionDealer": "Вы прекратили сотрудничество с фрилансером по данному проекту. ",
 	"chat.work_chat.system_messages.CancelsubmitedDescriptionFreelancer": "Вы прекратили сотрудничество с заказчиком по данному проекту. ",
 	"chat.work_chat.system_messages.CancelsubmitedTitleDealer": "Отмена работы",
@@ -46,6 +47,10 @@
 	"chat.work_chat.system_messages.workStartedTitleFreelancer": "Работа начата",
 	"chat.work_chat.system_messages.DealFinishCanceledByCustomerTitleFreelancer": "Работа по правкам",
 	"chat.work_chat.system_messages.DealFinishCanceledByCustomerTitleDealer": "Работа по правкам",
+	"chat.work_chat.system_messages.arbitrationTitleFreelancer": "Обращение в арбитраж",
+	"chat.work_chat.system_messages.arbitrationTitleDealer": "Обращение в арбитраж",
+	"chat.work_chat.system_messages.arbitrationDescriptionDealer": "Арбитр рассмотрит возникшую проблему. Ожидайте решения.",
+	"chat.work_chat.system_messages.arbitrationDescriptionFreelancer": "Арбитр рассмотрит возникшую проблему. Ожидайте решения. ",
 	"header.catalog": "Каталог",
 	"header.how_it_works": "Как это работает",
 	"user-pie-chart.compleatedDeals": "Завершеные",
