--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -6,7 +6,7 @@
 	"chat.work_chat.history.DealClosedByCustomer": "Работа завершена заказчиком",
 	"chat.work_chat.history.DealFinished": "Сделка завершена",
 	"chat.work_chat.history.DealFinishedByFreelancer": "Работа закончена",
-	"chat.work_chat.history.approveBreef": "Сделка подтверждена",
+	"chat.work_chat.history.approveBrief": "Сделка подтверждена",
 	"chat.work_chat.history.holdMoney": "Средства зарезирвировано.",
 	"chat.work_chat.history.workStarted": "Работа начата",
 	"chat.work_chat.system_messages.CancelsubmitedDescriptionDealer": "Вы прекратили сотрудничество с фрилансером по данному проекту. ",
@@ -29,10 +29,10 @@
 	"chat.work_chat.system_messages.DealFinishedDescriptionFreelancer": "У Вас есть возможность в любой момент вывести деньги, для этого Вам необходимо открыть страничку Финансы.",
 	"chat.work_chat.system_messages.DealFinishedTitleDealer": "Работа оплачена",
 	"chat.work_chat.system_messages.DealFinishedTitleFreelancer": "Работа оплачена",
-	"chat.work_chat.system_messages.approveBreefDescriptionDealer": "Для того, чтобы фрилансер начал работу Вам необходимо зарезирвировать оплату. ",
-	"chat.work_chat.system_messages.approveBreefDescriptionFreelancer": "Пожалуйста, не начинайте работу пока оплата не будет зарезеривирована на сервисе. Дожидайтесь уведомления об оплате. ",
-	"chat.work_chat.system_messages.approveBreefTitleDealer": "Ваша заявка принята! Теперь Ваши условия на сотрудничество взаимны.",
-	"chat.work_chat.system_messages.approveBreefTitleFreelancer": "Вы приняли заявку! Теперь Ваши условия на сотрудничество взаимны! ",
+	"chat.work_chat.system_messages.approveBriefDescriptionDealer": "Для того, чтобы фрилансер начал работу Вам необходимо зарезирвировать оплату. ",
+	"chat.work_chat.system_messages.approveBriefDescriptionFreelancer": "Пожалуйста, не начинайте работу пока оплата не будет зарезеривирована на сервисе. Дожидайтесь уведомления об оплате. ",
+	"chat.work_chat.system_messages.approveBriefTitleDealer": "Ваша заявка принята! Теперь Ваши условия на сотрудничество взаимны.",
+	"chat.work_chat.system_messages.approveBriefTitleFreelancer": "Вы приняли заявку! Теперь Ваши условия на сотрудничество взаимны! ",
 	"chat.work_chat.system_messages.holdMoneyDescriptionDealer": "Теперь вы смело можете ожидать от фрилансера начала работы.",
 	"chat.work_chat.system_messages.holdMoneyDescriptionFreelancer": "Теперь вы смело можете приступать к рабо",
 	"chat.work_chat.system_messages.holdMoneyTitleDealer": "Средства зарезирвированы",
