--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -11,11 +11,11 @@
 	"chat.work_chat.history.DealFinishCanceledByCustomer": "Возвращено на доработку",
 	"chat.work_chat.history.workStarted": "Работа начата",
 	"chat.work_chat.history.arbitration": "Обращение в арбитарж",
-	"chat.work_chat.history.CancelSubmited": "Отмена подтверждена",
-	"chat.work_chat.system_messages.CancelSubmitedDescriptionDealer": "Вы прекратили сотрудничество с фрилансером по данному проекту. ",
-	"chat.work_chat.system_messages.CancelSubmitedDescriptionFreelancer": "Вы прекратили сотрудничество с заказчиком по данному проекту. ",
-	"chat.work_chat.system_messages.CancelSubmitedTitleDealer": "Отмена работы",
-	"chat.work_chat.system_messages.CancelSubmitedTitleFreelancer": "Отмена работы",
+	"chat.work_chat.history.CancelSubmitted": "Отмена подтверждена",
+	"chat.work_chat.system_messages.CancelSubmittedDescriptionDealer": "Вы прекратили сотрудничество с фрилансером по данному проекту. ",
+	"chat.work_chat.system_messages.CancelSubmittedDescriptionFreelancer": "Вы прекратили сотрудничество с заказчиком по данному проекту. ",
+	"chat.work_chat.system_messages.CancelSubmittedTitleDealer": "Отмена работы",
+	"chat.work_chat.system_messages.CancelSubmittedTitleFreelancer": "Отмена работы",
 	"chat.work_chat.system_messages.DealCloseByFreelancerDescriptionDealer": "Фрилансер не желает продолжать данную работу. Если Вы не согласны, обратитесь в арбитраж.",
 	"chat.work_chat.system_messages.DealCloseByFreelancerDescriptionFreelancer": "Вы уведомили заказчинка, что не желаете продолжать данную работу. Ждите его ответа",
 	"chat.work_chat.system_messages.DealCloseByFreelancerTitleDealer": "Отмена работы",
