--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -1,14 +1,34 @@
 {
+	"auth-page.email-error": "Некоректний email",
+	"auth-page.email-error-require": "Введіть Email",
+	"auth-page.password-field.min-length": "мінімум 9",
+	"auth-page.password-field.numbers-required": "використовуйте числа",
+	"auth-page.password-field.small-case": "використовуйте маленькі букви a-z",
+	"auth-page.password-field.specific-simbols": "використовуйте символи",
+	"auth-page.password-field.title": "Введіть пароль",
+	"auth-page.password-field.uppercase": "використовуйте великі літери A-Z",
+	"auth-page.registr.confident-policy": "Я згоден (а) з <span> Політикою конфіденційності</span>",
+	"auth-page.registr.head": "Реєстрація",
+	"auth-page.registr.register-vs-social": "або зареєструватися за допомогою",
+	"auth-page.registr.submit-btn": "Зареєструватися",
+	"auth-page.registr.title": "Ласкаво просимо на кращу платформу фрілансу Whocan!",
 	"chat.work_chat.deal_info.packageType_advanced": "Пакет стандартный",
 	"chat.work_chat.deal_info.packageType_basic": "Пакет базовый",
 	"chat.work_chat.deal_info.packageType_premium": "Пакет премиум",
+	"chat.work_chat.history.CancelSubmitted": "",
 	"chat.work_chat.history.DealCloseByFreelancer": "Работа отменена фрилансером",
 	"chat.work_chat.history.DealClosedByCustomer": "Работа завершена заказчиком",
+	"chat.work_chat.history.DealFinishCanceledByCustomer": "",
 	"chat.work_chat.history.DealFinished": "Сделка завершена",
 	"chat.work_chat.history.DealFinishedByFreelancer": "Работа закончена",
 	"chat.work_chat.history.approveBrief": "Сделка подтверждена",
+	"chat.work_chat.history.arbitration": "",
 	"chat.work_chat.history.holdMoney": "Средства зарезирвировано.",
 	"chat.work_chat.history.workStarted": "Работа начата",
+	"chat.work_chat.system_messages.CancelSubmittedDescriptionDealer": "",
+	"chat.work_chat.system_messages.CancelSubmittedDescriptionFreelancer": "",
+	"chat.work_chat.system_messages.CancelSubmittedTitleDealer": "",
+	"chat.work_chat.system_messages.CancelSubmittedTitleFreelancer": "",
 	"chat.work_chat.system_messages.CancelsubmitedDescriptionDealer": "Вы прекратили сотрудничество с фрилансером по данному проекту. ",
 	"chat.work_chat.system_messages.CancelsubmitedDescriptionFreelancer": "Вы прекратили сотрудничество с заказчиком по данному проекту. ",
 	"chat.work_chat.system_messages.CancelsubmitedTitleDealer": "Отмена работы",
@@ -21,6 +41,10 @@
 	"chat.work_chat.system_messages.DealClosedByCustomerDescriptionFreelancer": "Заказчик не желает продолжать данную работу. Если Вы не согласны обратитесь в арбитраж.",
 	"chat.work_chat.system_messages.DealClosedByCustomerTitleDealer": "Отмена работы",
 	"chat.work_chat.system_messages.DealClosedByCustomerTitleFreelancer": "Отмена работы",
+	"chat.work_chat.system_messages.DealFinishCanceledByCustomerDescriptionDealer": "",
+	"chat.work_chat.system_messages.DealFinishCanceledByCustomerDescriptionFreelancer": "",
+	"chat.work_chat.system_messages.DealFinishCanceledByCustomerTitleDealer": "",
+	"chat.work_chat.system_messages.DealFinishCanceledByCustomerTitleFreelancer": "",
 	"chat.work_chat.system_messages.DealFinishedByFreelancerDescriptionDealer": "Теперь самое время оплатить работу фрилансера.",
 	"chat.work_chat.system_messages.DealFinishedByFreelancerDescriptionFreelancer": "Поздравляем! Теперь ожидайте оплату работы и отзыв от заказчика.",
 	"chat.work_chat.system_messages.DealFinishedByFreelancerTitleDealer": "Работа завершена",
@@ -33,6 +57,10 @@
 	"chat.work_chat.system_messages.approveBriefDescriptionFreelancer": "Пожалуйста, не начинайте работу пока оплата не будет зарезеривирована на сервисе. Дожидайтесь уведомления об оплате. ",
 	"chat.work_chat.system_messages.approveBriefTitleDealer": "Ваша заявка принята! Теперь Ваши условия на сотрудничество взаимны.",
 	"chat.work_chat.system_messages.approveBriefTitleFreelancer": "Вы приняли заявку! Теперь Ваши условия на сотрудничество взаимны! ",
+	"chat.work_chat.system_messages.arbitrationDescriptionDealer": "",
+	"chat.work_chat.system_messages.arbitrationDescriptionFreelancer": "",
+	"chat.work_chat.system_messages.arbitrationTitleDealer": "",
+	"chat.work_chat.system_messages.arbitrationTitleFreelancer": "",
 	"chat.work_chat.system_messages.holdMoneyDescriptionDealer": "Теперь вы смело можете ожидать от фрилансера начала работы.",
 	"chat.work_chat.system_messages.holdMoneyDescriptionFreelancer": "Теперь вы смело можете приступать к рабо",
 	"chat.work_chat.system_messages.holdMoneyTitleDealer": "Средства зарезирвированы",
@@ -41,9 +69,39 @@
 	"chat.work_chat.system_messages.workStartedDescriptionFreelancer": "Вы уведомили заказчика о том, что приступили к проекту. Счетчик срока исполнения работы запустился.",
 	"chat.work_chat.system_messages.workStartedTitleDealer": "Работа начата",
 	"chat.work_chat.system_messages.workStartedTitleFreelancer": "Работа начата",
+	"dealRate.firstRateCustomerCount1": "",
+	"dealRate.firstRateCustomerCount2": "",
+	"dealRate.firstRateCustomerCount3": "",
+	"dealRate.firstRateCustomerCount4": "",
+	"dealRate.firstRateCustomerCount5": "",
+	"dealRate.firstRateFreelancerCount1": "",
+	"dealRate.firstRateFreelancerCount2": "",
+	"dealRate.firstRateFreelancerCount3": "",
+	"dealRate.firstRateFreelancerCount4": "",
+	"dealRate.firstRateFreelancerCount5": "",
+	"dealRate.secondRateCustomerCount1": "",
+	"dealRate.secondRateCustomerCount2": "",
+	"dealRate.secondRateCustomerCount3": "",
+	"dealRate.secondRateCustomerCount4": "",
+	"dealRate.secondRateCustomerCount5": "",
+	"dealRate.secondRateFreelancerCount1": "",
+	"dealRate.secondRateFreelancerCount2": "",
+	"dealRate.secondRateFreelancerCount3": "",
+	"dealRate.secondRateFreelancerCount4": "",
+	"dealRate.secondRateFreelancerCount5": "",
+	"dealRate.thirdRateCustomerCount1": "",
+	"dealRate.thirdRateCustomerCount2": "",
+	"dealRate.thirdRateCustomerCount3": "",
+	"dealRate.thirdRateCustomerCount4": "",
+	"dealRate.thirdRateCustomerCount5": "",
+	"dealRate.thirdRateFreelancerCount1": "",
+	"dealRate.thirdRateFreelancerCount2": "",
+	"dealRate.thirdRateFreelancerCount3": "",
+	"dealRate.thirdRateFreelancerCount4": "",
+	"dealRate.thirdRateFreelancerCount5": "",
 	"header.catalog": "Каталог",
 	"header.how_it_works": "Як це працює",
 	"user-pie-chart.compleatedDeals": "Завершени",
-	"user-pie-chart.inProgress": "В процесси",
-	"user-pie-chart.falledDeals": "Провалени"
+	"user-pie-chart.falledDeals": "Провалени",
+	"user-pie-chart.inProgress": "В процесси"
 }
