--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -7,8 +7,9 @@
 	"auth-page.password-field.specific-simbols": "используйте символы",
 	"auth-page.password-field.title": "Введите пароль",
 	"auth-page.password-field.uppercase": "используйте большие буквы A-Z",
-	"auth-page.registr.confident-policy": "Я согласен(а) с <span>Политикой конфиденциальности</span>",
+	"auth-page.registr.confident-policy": "Политикой конфиденциальности",
 	"auth-page.registr.head": "Регистрация",
+	"auth-page.registr.i-agree": "Я согласен(а) с ",
 	"auth-page.registr.register-vs-social": "или  зарегистрироваться с помощью ",
 	"auth-page.registr.submit-btn": "Зарегистрироваться",
 	"auth-page.registr.title": "Добро пожаловать на лучшую платформу фриланса Whocan!",
