--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -7,8 +7,9 @@
 	"auth-page.password-field.specific-simbols": "використовуйте символи",
 	"auth-page.password-field.title": "Введіть пароль",
 	"auth-page.password-field.uppercase": "використовуйте великі літери A-Z",
-	"auth-page.registr.confident-policy": "Я згоден (а) з <span> Політикою конфіденційності</span>",
+	"auth-page.registr.confident-policy": "Політикою конфіденційності",
 	"auth-page.registr.head": "Реєстрація",
+	"auth-page.registr.i-agree": "Я згоден (а) з",
 	"auth-page.registr.register-vs-social": "або зареєструватися за допомогою",
 	"auth-page.registr.submit-btn": "Зареєструватися",
 	"auth-page.registr.title": "Ласкаво просимо на кращу платформу фрілансу Whocan!",
