--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,6 +1,14 @@
 {
 	"auth-page.email-error": "Некорректный email",
 	"auth-page.email-error-require": "Введите Email",
+	"auth-page.first-time": "Впервые на сайте?",
+	"auth-page.login.alient-pc": "Чужой компьютер",
+	"auth-page.login.forgot-pass": "Не помню пароль",
+	"auth-page.login.put-mail": "Введите email",
+	"auth-page.login.put-password": "Введите пароль",
+	"auth-page.login.subtitle": "Рады видеть вас снова",
+	"auth-page.login.title": "Войти в личный кабинет",
+	"auth-page.login.wrong-mail": "Не корректный email",
 	"auth-page.password-field.min-length": "минимум 9",
 	"auth-page.password-field.numbers-required": "используйте числа",
 	"auth-page.password-field.small-case": "используйте маленькие буквы a-z",
@@ -11,8 +19,30 @@
 	"auth-page.registr.head": "Регистрация",
 	"auth-page.registr.i-agree": "Я согласен(а) с ",
 	"auth-page.registr.register-vs-social": "или  зарегистрироваться с помощью ",
+	"auth-page.registr.repeat-password": "Повторно введите пароль",
 	"auth-page.registr.submit-btn": "Зарегистрироваться",
 	"auth-page.registr.title": "Добро пожаловать на лучшую платформу фриланса Whocan!",
+	"auth-page.registrate": "Зарегистрироваться",
+	"auth-page.sys-messages.change-succes": "Смена успешна",
+	"auth-page.sys-messages.change-succes-description": "Можете войти используя новый пароль",
+	"auth-page.sys-messages.email-werifired": "Email подтвержден",
+	"auth-page.sys-messages.email-werifired-description": "Теперь можете войти в личный кабинет",
+	"auth-page.sys-messages.erorr-message-title": "Ошибка",
+	"auth-page.sys-messages.finish-registration": "Подтвердите регистрацию!",
+	"auth-page.sys-messages.finish-registration-text": "Для завершения регистрации, пожалуйста, подтвердите Вашу электронную почту в сообщении, которое было отправлено Вам на указанный при регистрации почтовый ящик.",
+	"auth-page.sys-messages.mail-already-exist": "Этот Email уже зарегистрирован",
+	"auth-page.sys-messages.not-registred-email": "Этот Email не зарегистрирован",
+	"auth-page.sys-messages.register-succes": "Регистрация успешна",
+	"auth-page.sys-messages.request-succes": "Запрос одобрен!",
+	"auth-page.sys-messages.session-ended": "Время сессии истекло",
+	"auth-page.sys-messages.submit-password-email": "На указанную Вами почту придёт письмо для создания нового пароля.",
+	"auth-page.sys-messages.submit-registration": "Подтвердите регистрацию!",
+	"auth-page.sys-messages.submit-registration-text": "Для завершения регистрации, пожалуйста, подтвердите Вашу электронную почту в сообщении, которое было отправлено Вам на указанный при регистрации почтовый ящик.",
+	"auth-page.sys-messages.succes-text": "На указанную Вами почту придёт письмо с подтверждением регистрации.",
+	"auth-page.sys-messages.wrong-data": "Не верно указанные данные",
+	"auth-page.was-here": "Уже заходили",
+	"auth-page.wellcome-again": "Будем рады видеть вас снова на лучшей платформе фриланса Whocan",
+	"auth-page.wellcome-to-us": "Добро пожаловать на лучшую платформу фриланса Who can!",
 	"chat.work_chat.deal_info.packageType_advanced": "Пакет стандартный",
 	"chat.work_chat.deal_info.packageType_basic": "Пакет базовый",
 	"chat.work_chat.deal_info.packageType_premium": "Пакет премиум",
@@ -100,6 +130,8 @@
 	"dealRate.thirdRateFreelancerCount3": "Средне, могло быть и лучше",
 	"dealRate.thirdRateFreelancerCount4": "Хорошо, как и ожидается от заказчиков",
 	"dealRate.thirdRateFreelancerCount5": "Отлично, обратная связь приходила своевременно",
+	"general.enter": "Войти",
+	"general.password": "Пароль",
 	"header.catalog": "Каталог",
 	"header.how_it_works": "Как это работает",
 	"user-pie-chart.compleatedDeals": "Завершеные",
