--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -1,6 +1,14 @@
 {
 	"auth-page.email-error": "Некоректний email",
 	"auth-page.email-error-require": "Введіть Email",
+	"auth-page.first-time": "Вперше на сайті?",
+	"auth-page.login.alient-pc": "Чужий комп'ютер",
+	"auth-page.login.forgot-pass": "Не пам'ятаю пароль",
+	"auth-page.login.put-mail": "Напишіть email",
+	"auth-page.login.put-password": "Введіть пароль",
+	"auth-page.login.subtitle": "Раді вас бачити знову",
+	"auth-page.login.title": "Ви можете увійти",
+	"auth-page.login.wrong-mail": "Не вірний email",
 	"auth-page.password-field.min-length": "мінімум 9",
 	"auth-page.password-field.numbers-required": "використовуйте числа",
 	"auth-page.password-field.small-case": "використовуйте маленькі букви a-z",
@@ -11,8 +19,30 @@
 	"auth-page.registr.head": "Реєстрація",
 	"auth-page.registr.i-agree": "Я згоден (а) з",
 	"auth-page.registr.register-vs-social": "або зареєструватися за допомогою",
+	"auth-page.registr.repeat-password": "Повторно введіть пароль",
 	"auth-page.registr.submit-btn": "Зареєструватися",
 	"auth-page.registr.title": "Ласкаво просимо на кращу платформу фрілансу Whocan!",
+	"auth-page.registrate": "Зареєструватися",
+	"auth-page.sys-messages.change-succes": "зміна успішна",
+	"auth-page.sys-messages.change-succes-description": "Можете увійти використовуючи новий пароль",
+	"auth-page.sys-messages.email-werifired": "Email підтверджений",
+	"auth-page.sys-messages.email-werifired-description": "Тепер можете увійти в особистий кабінет",
+	"auth-page.sys-messages.erorr-message-title": "Помилка",
+	"auth-page.sys-messages.finish-registration": "Підтвердіть реєстрацію!",
+	"auth-page.sys-messages.finish-registration-text": "Для завершення реєстрації, будь ласка, підтвердіть Вашу електронну пошту в повідомленні, яке було відправлено Вам на вказаний при реєстрації поштову скриньку.",
+	"auth-page.sys-messages.mail-already-exist": "Цей email вже зареєстрований",
+	"auth-page.sys-messages.not-registred-email": "Цей Email не зареєстрований",
+	"auth-page.sys-messages.register-succes": "Реєстрація успішна",
+	"auth-page.sys-messages.request-succes": "Запит схвалений!",
+	"auth-page.sys-messages.session-ended": "Час сесії закінчився",
+	"auth-page.sys-messages.submit-password-email": "На вказану Вами пошту прийде лист для створення нового пароля.",
+	"auth-page.sys-messages.submit-registration": "Підтвердіть реєстрацію!",
+	"auth-page.sys-messages.submit-registration-text": "Для завершення реєстрації, будь ласка, підтвердіть Вашу електронну пошту в повідомленні, яке було відправлено Вам на вказаний при реєстрації поштову скриньку.",
+	"auth-page.sys-messages.succes-text": "На вказану Вами пошту прийде лист з підтвердженням реєстрації.",
+	"auth-page.sys-messages.wrong-data": "Не вірно зазначені дані",
+	"auth-page.was-here": "Уже заходили",
+	"auth-page.wellcome-again": "Будемо раді бачити вас знову на кращій платформі фрілансу Whocan",
+	"auth-page.wellcome-to-us": "Ласкаво просимо на кращу платформу фрілансу Who can!",
 	"chat.work_chat.deal_info.packageType_advanced": "Пакет стандартный",
 	"chat.work_chat.deal_info.packageType_basic": "Пакет базовый",
 	"chat.work_chat.deal_info.packageType_premium": "Пакет премиум",
@@ -100,6 +130,8 @@
 	"dealRate.thirdRateFreelancerCount3": "",
 	"dealRate.thirdRateFreelancerCount4": "",
 	"dealRate.thirdRateFreelancerCount5": "",
+	"general.enter": "Увійти",
+	"general.password": "Пароль",
 	"header.catalog": "Каталог",
 	"header.how_it_works": "Як це працює",
 	"user-pie-chart.compleatedDeals": "Завершени",
