--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,4 +1,5 @@
 {
+	"auth-page.drop-password": "Сбросить пароль",
 	"auth-page.email-error": "Некорректный email",
 	"auth-page.email-error-require": "Введите Email",
 	"auth-page.first-time": "Впервые на сайте?",
@@ -9,20 +10,23 @@
 	"auth-page.login.subtitle": "Рады видеть вас снова",
 	"auth-page.login.title": "Войти в личный кабинет",
 	"auth-page.login.wrong-mail": "Не корректный email",
-	"auth-page.password-field.min-length": "минимум 9",
+	"auth-page.password-field.min-length": "минимум 8",
 	"auth-page.password-field.numbers-required": "используйте числа",
 	"auth-page.password-field.small-case": "используйте маленькие буквы a-z",
 	"auth-page.password-field.specific-simbols": "используйте символы",
 	"auth-page.password-field.title": "Введите пароль",
 	"auth-page.password-field.uppercase": "используйте большие буквы A-Z",
 	"auth-page.registr.confident-policy": "Политикой конфиденциальности",
+	"auth-page.registr.different-pass": "Пароли не совпадают",
 	"auth-page.registr.head": "Регистрация",
 	"auth-page.registr.i-agree": "Я согласен(а) с ",
 	"auth-page.registr.register-vs-social": "или  зарегистрироваться с помощью ",
 	"auth-page.registr.repeat-password": "Повторно введите пароль",
 	"auth-page.registr.submit-btn": "Зарегистрироваться",
 	"auth-page.registr.title": "Добро пожаловать на лучшую платформу фриланса Whocan!",
+	"auth-page.registr.week-password": "Введите пароль",
 	"auth-page.registrate": "Зарегистрироваться",
+	"auth-page.reset-pass-title": "Восстановление пароля",
 	"auth-page.sys-messages.change-succes": "Смена успешна",
 	"auth-page.sys-messages.change-succes-description": "Можете войти используя новый пароль",
 	"auth-page.sys-messages.email-werifired": "Email подтвержден",
@@ -43,6 +47,34 @@
 	"auth-page.was-here": "Уже заходили",
 	"auth-page.wellcome-again": "Будем рады видеть вас снова на лучшей платформе фриланса Whocan",
 	"auth-page.wellcome-to-us": "Добро пожаловать на лучшую платформу фриланса Who can!",
+	"bell-notifications.CancelSubmitted": "Фрилансер подтвердил отмену сотрудничества",
+	"bell-notifications.DealCloseByFreelancer": "Работа отменина фрилансером",
+	"bell-notifications.DealClosedByCustomer": "Работа отменена заказчиком",
+	"bell-notifications.DealFinishCanceledByCustomer": "Работа отправлена на доработки",
+	"bell-notifications.DealFinished": "Работа оплачена",
+	"bell-notifications.DealFinishedByFreelancer": "Работа завершина фрилансером",
+	"bell-notifications.approveBrief": "Бриф подтвержден",
+	"bell-notifications.clear-all": "Очистить все",
+	"bell-notifications.holdMoney": "Средства зарезирвированы",
+	"bell-notifications.no-messages": "Уведомлений нет",
+	"bell-notifications.refuseBrief": "Отказ от брифа",
+	"bell-notifications.sentBrief": "Пришел бриф",
+	"bell-notifications.workStarted": "Работа начата",
+	"chat.breef.message.succes": "ПРИНЯТЬ ЗАЯВКУ",
+	"chat.breef.title": "Бриф",
+	"chat.file.empty": "Нету загруженных файлов",
+	"chat.previous-message-btn": "Предыдущие сообщения",
+	"chat.work_chat.brief-filling.cancel": "отказаться",
+	"chat.work_chat.brief-filling.fill": "заполнить",
+	"chat.work_chat.brief-filling.info.subtitle": "Экономте своё время, для того, чтобы Вам заново не заполнять бриф, дозаполните его сейчас ",
+	"chat.work_chat.brief-filling.info.title": "Вы не заполнили бриф до конца, мы не можем его сохранить",
+	"chat.work_chat.brief-filling.title": "Дизайн веб-сайтов с мобильным адаптивом",
+	"chat.work_chat.deal-filter.all": "Все",
+	"chat.work_chat.deal-filter.arbitr": "Арбитраж",
+	"chat.work_chat.deal-filter.archive": "Архив",
+	"chat.work_chat.deal-filter.brief": "Бриф",
+	"chat.work_chat.deal-filter.in-proccess": "В процессе",
+	"chat.work_chat.deal-filter.new": "Новые",
 	"chat.work_chat.deal_info.packageType_advanced": "Пакет стандартный",
 	"chat.work_chat.deal_info.packageType_basic": "Пакет базовый",
 	"chat.work_chat.deal_info.packageType_premium": "Пакет премиум",
@@ -56,14 +88,40 @@
 	"chat.work_chat.history.arbitration": "Обращение в арбитарж",
 	"chat.work_chat.history.holdMoney": "Средства зарезирвировано.",
 	"chat.work_chat.history.workStarted": "Работа начата",
+	"chat.work_chat.offer-data.call-arbiter": "обратиться в арбитраж",
+	"chat.work_chat.offer-data.cancel-deal": "отменить работу",
+	"chat.work_chat.offer-data.changes": "Кол-во правок:",
+	"chat.work_chat.offer-data.commercial": "Коммерческое использование",
+	"chat.work_chat.offer-data.days-to-finish": "Кол-во дней до завершения заказа",
+	"chat.work_chat.offer-data.finish-work": "Завершить работу",
+	"chat.work_chat.offer-data.history": "История",
+	"chat.work_chat.offer-data.hold-money": "Зарезирвировать оплату",
+	"chat.work_chat.offer-data.start-work": "Приступить к работе",
+	"chat.work_chat.offer-data.time-to-do": "Срок исполнения:",
+	"chat.work_chat.offer-data.title-moves": "Действия",
+	"chat.work_chat.rating.choose-stars": "Выберите необходимое кол-во звёзд",
+	"chat.work_chat.rating.customer": "заказчика",
+	"chat.work_chat.rating.freelancer": "фрилансера",
+	"chat.work_chat.rating.give-ur-mind": "Нам важно услышать ваше мнение",
+	"chat.work_chat.rating.rate-deal": "Пожалуйста оцените работу",
+	"chat.work_chat.rating.requireed": "Поле для заполнения обязательное",
+	"chat.work_chat.rating.sent": "отправить",
+	"chat.work_chat.rating.task.customer-three": "Вежливость фрилансера",
+	"chat.work_chat.rating.task.customer-two": "Сроки исполнения",
+	"chat.work_chat.rating.task.custoner-one": "Качество услуг",
+	"chat.work_chat.rating.task.freelancer-one": "Постановка задачи",
+	"chat.work_chat.rating.task.freelancer-three": "Контактность",
+	"chat.work_chat.rating.task.freelancer-two": "Четкость требований",
+	"chat.work_chat.system-messages.arbitr.title": "Решение арбитража",
+	"chat.work_chat.system-messages.arbitr.winer-is": "Вынесен вердикт в пользу",
 	"chat.work_chat.system_messages.CancelSubmittedDescriptionDealer": "Вы прекратили сотрудничество с фрилансером по данному проекту. ",
 	"chat.work_chat.system_messages.CancelSubmittedDescriptionFreelancer": "Вы прекратили сотрудничество с заказчиком по данному проекту. ",
 	"chat.work_chat.system_messages.CancelSubmittedTitleDealer": "Отмена работы",
 	"chat.work_chat.system_messages.CancelSubmittedTitleFreelancer": "Отмена работы",
-	"chat.work_chat.system_messages.CancelsubmitedDescriptionDealer": "",
-	"chat.work_chat.system_messages.CancelsubmitedDescriptionFreelancer": "",
-	"chat.work_chat.system_messages.CancelsubmitedTitleDealer": "",
-	"chat.work_chat.system_messages.CancelsubmitedTitleFreelancer": "",
+	"chat.work_chat.system_messages.CancelsubmitedDescriptionDealer": "Вы прекратили сотрудничество с фрилансером по данному проекту. ",
+	"chat.work_chat.system_messages.CancelsubmitedDescriptionFreelancer": "Вы прекратили сотрудничество с заказчиком по данному проекту. ",
+	"chat.work_chat.system_messages.CancelsubmitedTitleDealer": "Отмена работы",
+	"chat.work_chat.system_messages.CancelsubmitedTitleFreelancer": "Отмена работы",
 	"chat.work_chat.system_messages.DealCloseByFreelancerDescriptionDealer": "Фрилансер не желает продолжать данную работу. Если Вы не согласны, обратитесь в арбитраж.",
 	"chat.work_chat.system_messages.DealCloseByFreelancerDescriptionFreelancer": "Вы уведомили заказчинка, что не желаете продолжать данную работу. Ждите его ответа",
 	"chat.work_chat.system_messages.DealCloseByFreelancerTitleDealer": "Отмена работы",
@@ -93,13 +151,59 @@
 	"chat.work_chat.system_messages.arbitrationTitleDealer": "Обращение в арбитраж",
 	"chat.work_chat.system_messages.arbitrationTitleFreelancer": "Обращение в арбитраж",
 	"chat.work_chat.system_messages.holdMoneyDescriptionDealer": "Теперь вы смело можете ожидать от фрилансера начала работы.",
-	"chat.work_chat.system_messages.holdMoneyDescriptionFreelancer": "Теперь вы смело можете приступать к рабо",
-	"chat.work_chat.system_messages.holdMoneyTitleDealer": "Средства зарезирвированы",
-	"chat.work_chat.system_messages.holdMoneyTitleFreelancer": "Средства зарезирвированы ",
+	"chat.work_chat.system_messages.holdMoneyDescriptionFreelancer": "Теперь вы смело можете приступать к работе",
+	"chat.work_chat.system_messages.holdMoneyTitleDealer": "Средства зарезервированы",
+	"chat.work_chat.system_messages.holdMoneyTitleFreelancer": "Средства зарезервированы ",
 	"chat.work_chat.system_messages.workStartedDescriptionDealer": "Фрилансер приступил к работе. Следите за счетчиком срока исполнения работы.",
 	"chat.work_chat.system_messages.workStartedDescriptionFreelancer": "Вы уведомили заказчика о том, что приступили к проекту. Счетчик срока исполнения работы запустился.",
 	"chat.work_chat.system_messages.workStartedTitleDealer": "Работа начата",
 	"chat.work_chat.system_messages.workStartedTitleFreelancer": "Работа начата",
+	"comments.negative-comments": "Отрицательные",
+	"comments.positive-comments": "Положительные",
+	"comments.title": "Рейтинг и отзывы",
+	"das.ranks.next-lvl": "Следующий уровень",
+	"das.ranks.prev-lvl": "Предыдущий уровень",
+	"das.ranks.rank-conditions-title": "Условия перехода на следующий уровень",
+	"das.ranks.subtitle": "Уровень моего профессионализма и тарифный план",
+	"das.ranks.target": "Цель",
+	"das.ranks.title": "Мои достижения",
+	"das.ranks.u-get-lvl": "Вы достигли уровня",
+	"das.ranks.ur-lvl": "Ваш уровень",
+	"dashboard.cards-on-top.all-deals-by-all-time": "Кол-во заявок за время",
+	"dashboard.cards-on-top.balance": "состояние счёта",
+	"dashboard.cards-on-top.compleated-deals": "кол-во выполненных заказов",
+	"dashboard.cards-on-top.customers-quantity": "кол-во всех заказчиков",
+	"dashboard.cards-on-top.freezed-money": "замороженные средства",
+	"dashboard.cards-on-top.output-cesh": "выведенные средства",
+	"dashboard.cash-box.choose-operation-type": "Выберите операцию",
+	"dashboard.cash-box.input-money": " Ввести деньги",
+	"dashboard.cash-box.output-money": "Вывести деньги",
+	"dashboard.cash-box.ur-password": "ваш пароль",
+	"dashboard.cash-box.wright-summ": "напишите сумму",
+	"dashboard.finances.my-profit": "мой доход",
+	"dashboard.home-page.accaunt-statistic": "показатели аккаунта",
+	"dashboard.home-page.change-alailability-status": "Изменить статус можно здесь",
+	"dashboard.home-page.lost-projects": "проекты не сданы",
+	"dashboard.home-page.new-skill-firstPart": "Вы достигли следующего уровня фриланса",
+	"dashboard.home-page.new-skill-lastPart ": ", это открывает вам дополнительные возможности пользоваться сервисом Whocan!",
+	"dashboard.home-page.order-quantity": "Кол-во заказов",
+	"dashboard.home-page.projects-in-process": "Проектов в работе:",
+	"dashboard.home-page.projects-in-queue": "Проектов в очереди: ",
+	"dashboard.home-page.show-details": "Узнать детали",
+	"dashboard.home-page.user-availability": "Статус доступности:",
+	"dashboard.home-page.user-status": "Статус вашего профиля",
+	"dashboard.payment-history.contragent": "Контрагент",
+	"dashboard.payment-history.date": "Дата операции",
+	"dashboard.payment-history.dealCanceled": "Отмена резервации средств",
+	"dashboard.payment-history.dealDone-recipient": "Получение оплаты",
+	"dashboard.payment-history.dealDone-sender": "Оплаты",
+	"dashboard.payment-history.hold": "Средства зарезервированы",
+	"dashboard.payment-history.income": "Пополнение счета",
+	"dashboard.payment-history.input-output": "ввод и вывод денег",
+	"dashboard.payment-history.service": "Услуга",
+	"dashboard.payment-history.sum": "Сумма",
+	"dashboard.payment-history.title": "история платежей",
+	"dashboard.payment-history.type": "Тип операции",
 	"dealRate.firstRateCustomerCount1": "Ужасно, услуга не соответствует описанию",
 	"dealRate.firstRateCustomerCount2": "Плохо, услуга разочаровала меня",
 	"dealRate.firstRateCustomerCount3": "Средне, могло быть и лучше",
@@ -130,10 +234,69 @@
 	"dealRate.thirdRateFreelancerCount3": "Средне, могло быть и лучше",
 	"dealRate.thirdRateFreelancerCount4": "Хорошо, как и ожидается от заказчиков",
 	"dealRate.thirdRateFreelancerCount5": "Отлично, обратная связь приходила своевременно",
+	"file-loader.cancel": "Отмена",
+	"file-loader.click-here": "кликните сюда",
+	"file-loader.drop-files": "Перетащите файлы или ",
+	"file-loader.load": "Загрузить",
+	"file-loader.load-file": "Загрузите файлы",
+	"file-loader.put-file-here": "Перетащите сюда файл",
+	"general.cancel": "ОТКЛОНИТЬ",
+	"general.congratulate": "Поздравляем",
+	"general.customer": "Заказчик",
 	"general.enter": "Войти",
+	"general.exit": "Выйти",
+	"general.file": "Файл",
+	"general.freelancer": "Фрилансер",
+	"general.income": "доход",
+	"general.money-output": "вывод денег",
+	"general.offline": "Офлайн",
+	"general.online": "Онлайн",
 	"general.password": "Пароль",
+	"general.roll": "свернуть",
+	"general.save": "Сохранить",
+	"general.send": "отправить",
+	"general.show-profile": "смотреть профиль",
+	"general.success": "Подтвердить",
+	"general.time.month": "Месяц",
+	"general.time.year": "Год",
+	"general.unroll": "развернуть",
+	"general.user-busy": "загружен",
+	"general.user-free": "свободен",
 	"header.catalog": "Каталог",
 	"header.how_it_works": "Как это работает",
+	"languages.change-language": "Изменить язык",
+	"languages.ru-full": "Русский",
+	"languages.uk-full": "Украинский",
+	"main-page.hello-user": "Привет,",
+	"menu.arbitration": "Арбитраж",
+	"menu.catalog": "Каталог",
+	"menu.chat": "Чат",
+	"menu.dashboard": "Дашбоард",
+	"menu.finances": "Финансы",
+	"menu.go-home": "На главную",
+	"menu.home": "Главная",
+	"menu.my-services": "Мои услуги",
+	"menu.projects": "Проекты",
+	"menu.settings": "Настройки",
+	"ranks.first.deal-compleated": "Закрытие первой сделки",
+	"ranks.first.first-offer-creation": "Создание первой услуги",
+	"ranks.first.profile-filling": "Заполнение профиля",
+	"ranks.first.title": "Начинающий",
+	"ranks.forth.title": "Мастер",
+	"ranks.rating": "Рейтинг",
+	"ranks.second.title": "Уверенный",
+	"ranks.success-deals": "Успешных сделок",
+	"ranks.third.title": "Опытный",
+	"ranks.work-days": "Кол-во рабочих дней",
+	"ranks.zero.emal-confirmation": "Подтверждение почты",
+	"ranks.zero.registration": "Регистрация",
+	"ranks.zero.title": "Стартовый",
+	"syte-title.dashboard": "Дашбоард",
+	"user-fields.answer-time": "Среднее время ответа",
+	"user-fields.arbitr": "Арбитраж",
+	"user-fields.compleated-deals": "Выполнено заказов",
+	"user-fields.country": "Страна",
+	"user-fields.speeking-language": "Разговорный язык",
 	"user-pie-chart.compleatedDeals": "Завершеные",
 	"user-pie-chart.falledDeals": "Проваленные",
 	"user-pie-chart.inProgress": "В процессе"
